toolbar is fixed to top and map is completely visible

--- a/packages/column-footprint-editor/src/components/blueprint/main.css
+++ b/packages/column-footprint-editor/src/components/blueprint/main.css
@@ -28,10 +28,11 @@
   justify-content: flex-end;
 }
 
-.navbar-layout {
+.nav-contents {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .toolbar {
