--- a/packages/column-footprint-editor/src/components/map/map.css
+++ b/packages/column-footprint-editor/src/components/map/map.css
@@ -5,7 +5,7 @@
 
 .map-container {
   position: absolute;
-  top: 0;
+  top: 50px;
   bottom: 0;
   left: 0;
   right: 0;
